# bing-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: detailed.rs  detailed_custom.rs  simple.rs  simple_custom.rs  synthesize.rs  websocket.rs  websocket_custom.rs  websocket_wake_sleep.rs
src/: error.rs  errors.rs  lib.rs  speech.rs
src/error/: mod.rs
src/speech/: c.rs  mod.rs  voice.rs  websocket.rs
