[package]
name = "bing-rs"
version = "0.0.1"
description = "Rust bindings to to the Bing API"
authors = ["Lilis Iskandar <lilis@veand.co>"]

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
hyper = "0.11"
hyper-rustls = { version = "0.12", optional = true }
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
error-chain = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
